--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "gatsby-starter-paperbase",
+  "name": "spirits-ledger",
   "version": "1.0.0",
-  "description": "A Gatsby Starter for using Material UI's Paperbase premium theme.  Great for making admin tools and dashboards.",
+  "description": "Australian Spirits Directory",
   "main": "index.js",
-  "repository": "https://github.com/willcode4food/gatsby-starter-paperbase",
-  "author": "Marc Arbesman marbesman@gmail.com",
+  "repository": "https://github.com/p-tul/spirits-ledger/",
+  "author": "Patrick Tully <patrick@spiritsledger.com.au>",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "gatsby": "^2.3.0",
     "gatsby-plugin-material-ui": "^1.2.4",
+    "gatsby-plugin-netlify-cms": "^4.1.26",
+    "netlify-cms-app": "^2.9.7",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "typeface-merriweather": "^0.0.72",
