--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: test-repo
+  name: github
+  repo: p-tul/spirits-ledger
 media_folder: static/assets
 public_folder: assets
 collections:
