--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gatsby": "^2.3.0",
     "gatsby-plugin-material-ui": "^1.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.26",
+    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.32",
     "netlify-cms-app": "^2.9.7",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
